--- a/style.css
+++ b/style.css
@@ -1,7 +1,45 @@
-body{
-    background-image: url(./assets/bg.jpg);
-    background-position: top center;
-    background-size: 100% auto;
-    background-repeat: no-repeat;
-    background-color: #121214;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body * {
+  font-family: "Inter", sans-serif;
+  line-height: 160%;
+}
+
+body {
+  background-image: url(./assets/bg.jpg);
+  background-position: top center;
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  background-color: #121214;
+}
+
+ul {
+  list-style: none;
+}
+
+main {
+  max-width: 580px;
+  width: 90%;
+  margin: auto;
+}
+
+section {
+  color: white;
+}
+
+section h2 {
+  letter-spacing: -0.47px;
+}
+
+section p {
+  letter-spacing: -0.18px;
+  color: #a1a1aa;
+}
+
+ul{
+  display: flex;  
 }
