--- a/style.css
+++ b/style.css
@@ -25,10 +25,26 @@ main {
   max-width: 580px;
   width: 90%;
   margin: auto;
+  display: grid;
+  gap: 24px;
 }
 
 section {
   color: white;
+  background-image: linear-gradient(
+    90deg,
+    #9572fc 0%,
+    #43e7ad 50.52%,
+    #e2d45c 100%
+  );
+  padding-top: 4px;
+  border-radius: 10px;
+}
+
+section div {
+  background-color: #2a2634;
+  padding: 24px 32px 32px;
+  border-radius: 8px;
 }
 
 section h2 {
@@ -40,6 +56,19 @@ section p {
   color: #a1a1aa;
 }
 
-ul{
-  display: flex;  
+section ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  margin-top: 24px;
+}
+
+.games-list img {
+  width: 90px;
+  border-radius: 8px;
+}
+
+.channel-list img {
+  border-radius: 50%;
+  width: 70px;
 }
