--- a/style.css
+++ b/style.css
@@ -17,14 +17,39 @@ body {
   background-color: #121214;
 }
 
-ul {
-  list-style: none;
+header {
+  margin-top: 32px;
+  height: calc(100px);
+}
+
+header div {
+  width: 100px;
+  margin: auto;
+  background-image: linear-gradient(
+    90deg,
+    #9572fc 0%,
+    #43e7ad 50.52%,
+    #e2d45c 100%
+  );
+  border-radius: 50%;
+  display: flex;
+  padding: 4px;
+  transition: transform 0.3s;
+}
+
+header div:hover {
+  transform: scale(1.1);
+}
+
+header div img {
+  width: 100%;
+  border-radius: 50px;
 }
 
 main {
   max-width: 580px;
   width: 90%;
-  margin: auto;
+  margin: 32px auto;
   display: grid;
   gap: 24px;
 }
@@ -61,6 +86,15 @@ section ul {
   flex-wrap: wrap;
   gap: 16px;
   margin-top: 24px;
+  list-style: none;
+}
+
+section ul li {
+  transition: transform 0.3s;
+}
+
+section ul li:hover {
+  transform: scale(1.1);
 }
 
 .games-list img {
@@ -71,4 +105,49 @@ section ul {
 .channel-list img {
   border-radius: 50%;
   width: 70px;
+  border: 1px solid #443e54;
+}
+
+header div {
+  animation: fromTop .7s .2s backwards;
+}
+
+@keyframes fromTop {
+  from {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+main section {
+  animation: fromBottom 0.7s backwards;
+}
+
+main section:nth-child(1) {
+  animation-delay: 0;
+}
+
+main section:nth-child(2) {
+  animation-delay: .4s;
+}
+
+main section:nth-child(3) {
+  animation-delay: .8s;
+}
+
+@keyframes fromBottom {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
