--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ section ul li:hover {
 }
 
 header div {
-  animation: fromTop .7s .2s backwards;
+  animation: fromTop 0.7s 0.2s backwards;
 }
 
 @keyframes fromTop {
@@ -133,11 +133,11 @@ main section:nth-child(1) {
 }
 
 main section:nth-child(2) {
-  animation-delay: .4s;
+  animation-delay: 0.4s;
 }
 
 main section:nth-child(3) {
-  animation-delay: .8s;
+  animation-delay: 0.8s;
 }
 
 @keyframes fromBottom {
